# FlightTrackr

./: .gitignore  app.py  docker-compose.tailscale.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.tailscale/: funnel.json
api/: .env.example
api/alembic/versions/: 0001_initial_schema.py  0003_drop_user_oauth_tokens.py
api/app/core/: app_factory.py  middleware.py  settings.py
api/app/db/: supabase.py
api/app/mail/: base.py  gmail.py  outlook.py  protonmail.py
api/app/models/: __init__.py  airline.py  airport.py  flight.py  mail_connection.py
api/app/parsers/: bcbp_decoder.py  dataclass.py
api/app/schemas/: flight_schema.py
api/app/services/: auth_service.py  flight_service.py  mail_token_service.py  oauth_token_service.py  parser_service.py
api/app/tasks/: gmail_sync.py
api/scripts/: seed_airlines.py  seed_airports.py
app/backend/: .gitignore  main.py
app/backend/core/: settings.py
app/backend/services/: google_oauth.py
app/frontend/: package-lock.json  package.json  tailwind.config.ts
app/frontend/app/: globals_backup.css  page.tsx
parsers/: base.py  bcbp_decoder.py  dataclass.py  factory.py  utils.py
src/main/: settings.py
src/parsers/: constants.py  enum.py
src/parsers/airlines/: akasa.py  generic.py  indigo.py
web/: next.config.ts  package-lock.json
web/app/dashboard/: page.tsx
web/app/mail-callback/: page.tsx
web/lib/api/: auth-service.ts  flight-service.ts  gmail-service.ts  index.ts  mail-connection-service.ts
web/lib/hooks/: index.ts  useAuth.ts  useGmailSync.ts  (+1 more)
(+8 files in other folders)
